--- a/index.html
+++ b/index.html
@@ -13,18 +13,26 @@
     <header>
         <div class="header-content">
             <div class="logo">Kailin Xu</div>
-            <div class="nav-links">
+            <button class="hamburger" aria-label="Menu">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
+            <nav class="nav-links">
                 <a href="#about">About</a>
                 <a href="#projects">Projects</a>
                 <a href="#blog">Blog</a>
                 <a href="#contact">Contact</a>
-                <a href="https://www.linkedin.com/in/kailin-xu-msc-512120191/" target="_blank" class="social-link">
+                <a href="https://linkedin.com/in/YOUR-LINKEDIN-USERNAME" target="_blank" class="social-link">
                     <img src="assets/linkedin.svg" alt="LinkedIn">
                 </a>
                 <a href="https://instagram.com" target="_blank" class="social-link">
                     <img src="assets/instagram.svg" alt="Instagram">
                 </a>
-            </div>
+                <a href="#" class="social-link">
+                    <img src="assets/link.svg" alt="Website">
+                </a>
+            </nav>
         </div>
     </header>
 
@@ -61,5 +69,24 @@
             </div>
         </section>
     </div>
+
+    <script>
+        // Mobile menu toggle
+        const hamburger = document.querySelector('.hamburger');
+        const navLinks = document.querySelector('.nav-links');
+        
+        hamburger.addEventListener('click', () => {
+            hamburger.classList.toggle('active');
+            navLinks.classList.toggle('active');
+        });
+
+        // Close mobile menu when clicking a link
+        document.querySelectorAll('.nav-links a').forEach(link => {
+            link.addEventListener('click', () => {
+                hamburger.classList.remove('active');
+                navLinks.classList.remove('active');
+            });
+        });
+    </script>
 </body>
 </html> 
